  - fixed assign for {counter} (messju)
  - added params vdir, hdir and inner to html_table to allow looping
    over the data in various directions (messju)
  - allow spaces in literal tags (Paul Lockaby, Monte)
  - speed up compiled templates, hardcode plugin filepaths
    instead of dynamically calculate at runtime. (Monte)
  - fixed bug in _create_dir_structure() when used with open_basedir-
    restriction and relative paths (messju)
  - use DIRECTORY_SEPARATOR exclusively, keep DIR_SEP for BC (Monte)
  - changed "link" to "href" in html_image. "link" is still working
    but deprecated (messju)
  - html_image always renders an alt-tag now (default alt="") (messju)
  - fixed assign attribute for multiple counters (messju)
  - added simple math operators to variables (Monte)
  - reverted patch for case-insensitive tag-names (messju)
  - enabled array(&$obj. 'source', 'timestamp', 'secure', 'trusted')
    as callback for register_resource() (messju);
  - enabled array(&$obj, 'method') as callback for
    $default_template_handler_func (messju)
  - made plugin-names case-insensitive. this affects compiler/block/custom-
    functions and modifers. (messju)
  - remove unnecessary close/open tags from compiled templates
    (Monte)
  - fixed errornous creation of '//' in image_path in html_image (messju)
  - fix escapement of special chars for key vals in debug
    console (Monte)
  - fixed debug timing logic for config_load (Tom Sommer, Monte)
  - all in-code doc comments converted to phpDocumentor format (Greg)
  - moved strip from smarty core to plugin (Monte)
  - moved config_load from smarty core to plugin (Monte)
  - added &$repeat-paramter to block-functions (messju)
  - enabled hex-constants in function.math.php (messju)
  - enabled hex-constants (0x...) as function-attributes, inside if-statements
    and as modifier-parameters (messju)
  - fixed bug with passing $smarty as reference in Smarty.compiler.class
    (messju)